Redelegated tds to list partial, fixed spacing and style issues

--- a/app/assets/stylesheets/pokemons.scss
+++ b/app/assets/stylesheets/pokemons.scss
@@ -69,3 +69,17 @@
 .ability-hidden {
     font-weight: bold;
 }
+
+.pokemon-editable {
+    background-color: transparent;
+    border: none;
+    text-align: center;
+}
+
+.pokemon-editable-iv {
+    width: 2em;
+}
+
+option {
+    color: black;
+}
